# openmr

examples/: CMakeLists.txt  Cube3-I.cpp  Cube4-I.cpp  Cube5-I.cpp  Minicube-I-1.cpp  Minicube-I-flat.cpp  Minicube-II-1.cpp  TODO.txt  Test-servocontroller-1.cpp  Test-servocontroller-1.py  Test-servocontroller-2.cpp  Test-servocontroller-3.cpp  Test-servocontroller-4.cpp  Test-sinoscontroller-1.cpp  Test-sinoscontroller-1.py  Test-sinoscontroller-2.cpp  Test01.cpp  TestBase.cpp  TestBase.h  Tricube-I-1.cpp  snake.cpp  test.cpp
examples/models/: Cube3-I.env.xml  Cube3-I.robot.xml  Cube3-hexa-I.env.xml  Cube3-hexa-I.robot.xml  Cube4-I.env.xml  Cube4-I.robot.xml  Cube4-hexa-I.env.xml  Cube4-hexa-I.robot.xml  Cube5-I.env.xml  Cube5-I.robot.xml  Cube5-II.robot.xml  Cube5-hexa-I.env.xml  Cube5-hexa-I.robot.xml  Head.body.xml  Minicube-I-flat.env.xml  Minicube-I-hexa.env.xml  Minicube-I-hexa.robot.xml  Minicube-I.env.xml  Minicube-I.robot.xml  Minicube-II-hexa.env.xml  Minicube-II-hexa.robot.xml  Minicube-II.env.xml  Minicube-II.robot.xml  Tail.body.xml  TailP.kinbody.xml  Tricube-I-hexa.env.xml  Tricube-I-hexa.robot.xml  Tricube-I.env.xml  Tricube-I.robot.xml  Unimod.kinbody.xml  Unimod1.env.xml  Unimod2.env.xml  Unimod3.env.xml  Unimod4.env.xml  snake.env.xml  snake.robot.xml  test.env.xml  test.robot.xml
include/: hubo.hpp
plugin/: CMakeLists.txt  FindOpenRAVE.cmake  openmrmain.cpp  plugindefs.h  servocontroller.h  sinoscontroller.h
src/: CMakeLists.txt  FindOpenRAVE.cmake  ach-setup.h  achcontroller.h  achread.h  demo-loop.cpp  mimiccontroller.h  openmrmain.cpp  plugindefs.h  servocontroller.h  sinoscontroller.h  trajcontroller.h
